--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "redux": "^4.2.0",
     "sweetalert2": "^11.4.8",
     "uuid": "^9.0.0",
