--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Sortom",
-  "name": "Firmas, documentos, CRM y más.",
+  "short_name": "BestMovie",
+  "name": "",
   "icons": [
     {
       "src": "favicon.ico",
